--- a/ClientApp/src/app/account/dialogs/change-password-dialog/change-password-dialog.component.html
+++ b/ClientApp/src/app/account/dialogs/change-password-dialog/change-password-dialog.component.html
@@ -24,8 +24,12 @@
                 <mat-label>New Password</mat-label>
                 <input matInput formControlName = "password" [type]="hide ? 'password' : 'text'">
                 <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                <mat-error>A new password is required</mat-error>
+                <mat-error></mat-error>
             </mat-form-field>
+            <!-- password strength validation -->
+            <div *ngIf="changePasswordForm.get('password').hasError('passwordStrength') && changePasswordForm.get('password').touched" class = "error-msg">
+                {{changePasswordForm.get('password').errors['passwordStrength']}}
+            </div>
             
     
             <mat-form-field class="justifier" appearance="legacy">
