--- a/ClientApp/src/app/admin-console/dialogs/reset-password-dialog/reset-password-dialog.component.html
+++ b/ClientApp/src/app/admin-console/dialogs/reset-password-dialog/reset-password-dialog.component.html
@@ -3,7 +3,7 @@
     <h1 mat-dialog-title>
         <mat-toolbar class="task-header" color="primary">
             <mat-toolbar-row>
-                <div class="header-row">Change Password:</div>
+                <div class="header-row">Reset Password:</div>
             </mat-toolbar-row>
             <mat-toolbar-row>
                 <div class="header-row">{{userResource.fullName}}</div>
@@ -18,8 +18,12 @@
                 <mat-label>New Password</mat-label>
                 <input matInput formControlName = "password" [type]="hide ? 'password' : 'text'">
                 <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                <mat-error>A new password is required</mat-error>
+                <mat-error></mat-error>
             </mat-form-field>
+             <!-- password strength validation -->
+             <div *ngIf="resetPasswordForm.get('password').hasError('passwordStrength') && resetPasswordForm.get('password').touched" class = "error-msg">
+                {{resetPasswordForm.get('password').errors['passwordStrength']}}
+            </div>
     
             <mat-form-field class="justifier" appearance="legacy">
                 <mat-label>Confirm New Password</mat-label>
