--- a/ClientApp/src/app/admin-console/dialogs/edit-user-dialog/edit-user-dialog.component.html
+++ b/ClientApp/src/app/admin-console/dialogs/edit-user-dialog/edit-user-dialog.component.html
@@ -23,8 +23,12 @@
             <mat-form-field class="justifier" appearance="legacy">
                 <mat-label>Email-Address</mat-label>
                 <input matInput formControlName = "emailAddress">
-                <mat-error>Email-Address is required</mat-error>
+                <mat-error> This is not a valid email-address</mat-error>
+                
             </mat-form-field>
+            <div class="error-msg">
+                <span *ngIf="isEmailError" >{{emailError}}</span>
+            </div>
 
             <mat-form-field class="justifier" appearance="legacy">
                 <mat-label>First Name</mat-label>
