Last debug before turning in assignment

--- a/ClientApp/src/app/admin-console/dialogs/add-revoke-game-dialog/add-revoke-game-dialog.component.html
+++ b/ClientApp/src/app/admin-console/dialogs/add-revoke-game-dialog/add-revoke-game-dialog.component.html
@@ -21,7 +21,7 @@
             </div>
           
             <mat-radio-group layout="row" class="radioButtons">
-                <mat-radio-button value="ADD" color = "primary" class="radioButtons" (click)="setGameAction('ADD')"> ADD </mat-radio-button>
+                <mat-radio-button value="ADD" color = "primary" checked="true" class="radioButtons" (click)="setGameAction('ADD')"> ADD </mat-radio-button>
                 <mat-radio-button value="REVOKE" color = "primary" class="radioButtons" (click)="setGameAction('REVOKE')"> REVOKE </mat-radio-button>
             </mat-radio-group>
             
